Fix expression table a bit too large (was generating a horizontal scrollbar)

--- a/src/components/Table/override.scss
+++ b/src/components/Table/override.scss
@@ -5,3 +5,6 @@ table.table.sortable thead > tr > th.hasInfoBubble:hover {
 .helpIcon {
   vertical-align: -webkit-baseline-middle;
 }
+.table.is-fullwidth {
+  width: 98%;
+}
